# CLEAR-LeWM

./: .gitignore  .gitmodules  CONTRIBUTING.md  DATA_SPEC.md  EVALUATION_SPEC.md  LICENSE  NOTICE.md  PERFORMANCE.md  README.md  index.html  pyproject.toml  website.css  website.js
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  cem_batch_four_task_20260722.json  cem_batch_pusht_20260721.json  fast_audit_cube_20260723.json  fast_audit_pusht_20260721.json  fast_audit_pusht_20260723.json  fast_audit_reacher_20260723.json  fast_audit_tworoom_20260723.json  fast_loader_cube_20260723.json  fast_loader_pusht_20260721.json  fast_loader_pusht_20260723.json  fast_loader_reacher_20260723.json  fast_loader_tworoom_20260723.json
checkpoints/: README.md  official-v0.3.json
clear_lewm/: __init__.py  audit.py  cli.py  datasets.py  environment.py  fast_conversion.py  fast_dataset.py  fast_profiles.py  manifests.py  metrics.py  protocols.py  runner.py  runtime.py  submissions.py  tasks.py  topology.py  tworoom_runtime.py
docs/: AUDIT_FINDINGS.md  OFFICIAL_CHECKPOINTS.md  PROTOCOL_CALIBRATION.md  RUNTIME_REPRODUCIBILITY.md  SUBMITTING_RESULTS.md
manifests/: README.md
requirements/: reference-cu124.txt
results/: README.md
scripts/: attach_checkpoint_provenance.py  audit_fast_dataset.py  audit_result_environments.py  benchmark_fast_dataset.py  benchmark_fast_four_tasks.py  build_community_leaderboard.py  build_readme_gif.py  build_readme_showcase.py  build_v03_media.py  build_v05_media.py  prepare_official_checkpoints.py  preprocess_fast_dataset.py  (+1 more)
(+212 files in other folders)
