[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clear-lewm"
version = "0.2.3"
description = "Auditable and reproducible evaluation for LeWM-compatible latent world models"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "DavidSunok"}]
dependencies = [
  "h5py>=3.10",
  "numpy>=1.24",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
  "hdf5plugin>=4.4",
  "pillow>=10",
  "pytest>=8.0",
  "ruff>=0.5",
]
lewm = [
  "hydra-core>=1.3,<2",
  "omegaconf>=2.3,<3",
  "scikit-learn>=1.4",
  "stable-worldmodel[env]==0.1.0",
  "torch>=2.4",
  "torchvision>=0.19",
]

[project.scripts]
clear-lewm = "clear_lewm.cli:main"

[project.urls]
Homepage = "https://github.com/DavidSunok/CLEAR-LeWM"
Repository = "https://github.com/DavidSunok/CLEAR-LeWM"
Issues = "https://github.com/DavidSunok/CLEAR-LeWM/issues"

[tool.setuptools.packages.find]
include = ["clear_lewm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
